--- a/server/parameters.yml
+++ b/server/parameters.yml
@@ -149,9 +149,14 @@ consent:
     content: 'Si vous avez moins de 18 ans, vous devez faire valider le
       présent formulaire par un parent ou un représentant légal.'
   - type: list
-    title: 'Les données suivantes sont collectées:'
+    title: 'Les données suivantes sont collectées :'
     content:
-      - 'Les réponses aux formulaires sociologiques et cognitifs.'
+      - 'Les réponses aux formulaires sociologiques et cognitifs. La question relative à l’identité de genre
+        est recueillie à titre de variable descriptive secondaire. Elle permet d’identifier
+        d’éventuelles différences entre groupes, sans que celles-ci constituent l’objet principal de notre recherche.
+        Les résultats seront analysés dans le cadre de notre domaine de compétence et, le cas échéant,
+        des différences entre genres pourront être mentionnées sans interprétation sociologique approfondie,
+        celles-ci pouvant relever de mécanismes sociaux plus larges tels que les effets d’une socialisation genrée.'
       - 'Les métriques de jeux, à savoir le temps passé, le score et la distance parcourue par niveau.'
       - 'Les interactions avec la carte pendant un niveau, à savoir les déplacements latéraux,
         les zooms en avant et en arrière.'
