--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "@parcel/packager-raw-url": "^2.13.3",
     "@parcel/transformer-sass": "^2.13.3",
     "@parcel/transformer-webmanifest": "^2.13.3",
+    "@zip.js/zip.js": "^2.8.17",
     "body-parser": "^2.2.0",
     "buffer": "^6.0.3",
     "concurrently": "^9.1.2",
+    "csv-stringify": "^6.6.0",
     "express": "^4.21.2",
+    "express-basic-auth": "^1.2.1",
     "js-yaml": "^4.1.0",
     "nodemon": "^3.1.9",
     "parcel": "^2.13.3",
